--- a/frontend/src/components/JournalEntryForm.css
+++ b/frontend/src/components/JournalEntryForm.css
@@ -103,3 +103,11 @@ button:disabled {
     min-height: 200px;
   }
 } 
+
+.journal-toggle-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top: 1px solid #E6D8B4;
+} 
